--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,11 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
+            android:label="@string/app_name"></activity>
+        <activity android:name=".activity.NextActivity">
 
-            android:label="@string/app_name">
+        </activity>
+        <activity android:name=".TextActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
