--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,21 +11,18 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name">
-
-        </activity>
-        <activity android:name=".activity.NextActivity">
-
-        </activity>
+            android:label="@string/app_name"></activity>
+        <activity android:name=".activity.NextActivity"></activity>
         <activity android:name=".TextActivity">
+
+        </activity>
+        <activity android:name=".Beta"></activity>
+        <activity android:name=".RegActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".Beta">
-
         </activity>
     </application>
 
